content overflow issues when searching

--- a/Styles/global/_defaults.less
+++ b/Styles/global/_defaults.less
@@ -17,6 +17,16 @@ body {
     overflow: hidden;
 }
 
+#zone-feature,
+#zone-subfeature,
+#zone-sectiona,
+#zone-sectionb
+#zone-sectionc
+#zone-sectiond,
+#zone-footer {
+    overflow: hidden;
+}
+
 @media (min-width: @screen-desktop) {
     body {
         margin-bottom: 0;
