--- a/Styles/pages/_search.less
+++ b/Styles/pages/_search.less
@@ -298,7 +298,7 @@
         }
     
         &.open {
-            overflow: hidden;
+            //overflow: hidden;
 
             .search-form {
                 width: 80%;
