--- a/Styles/theme.css
+++ b/Styles/theme.css
@@ -11158,6 +11158,13 @@ body {
   padding-top: 58px;
   overflow: hidden;
 }
+#zone-feature,
+#zone-subfeature,
+#zone-sectiona,
+#zone-sectionb #zone-sectionc #zone-sectiond,
+#zone-footer {
+  overflow: hidden;
+}
 @media (min-width: 992px) {
   body {
     margin-bottom: 0;
@@ -15635,9 +15642,6 @@ img {
   }
   .search-wrapper .search-form .search-input-group .btn {
     display: inline-block;
-  }
-  .search-wrapper.open {
-    overflow: hidden;
   }
   .search-wrapper.open .search-form {
     width: 80%;
